Added a splitter and a record type for immutable data.